<resources>
    <string name="app_name">פיקוד העורף - איסוף נקודות מחסה</string>
    <string name="insert_points_popup">מסך הזנת נקודות</string>
    <string name="admin_popup"> מסך אישור נקודות אדמין</string>
    <string name="insert_point">Insert Point</string>
    <string name="google_map_api">AIzaSyBNGthAXVuFNlo3EfMRMq_Ei7fKr9U8TnY</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="show_approved_points">הצג רק נקודות שאושרו</string>
    <string name="show_pending_points">הצג רק נקודות שטרם אושרו</string>
    <string name="show_all_points">הצג את כל הנקודות שהוכנסו</string>
    <string name="test_navigation">הצג ניווט לנקודה מהמיקום הנוכחי</string>
    <string name="insert_new_point">הכנס נקודה חדשה</string>
    <string name="current_point">נקודת מחסה נוכחית</string>
    <string name="confirm">אישור</string>
    <string name="insert_password">הכנס סיסמה</string>
    <string name="insert_email">הכנס אימייל</string>
    <string name="forgot_password">שכחת סיסמה?</string>
    <string name="reset_password">אפס סיסמה</string>
    <string name="name">שם</string>
    <string name="points_collected">נקודות שנאספו</string>
    <string name="points_approved">נקודות שאושרו</string>
    <string name="points_declined">נקודות שנדחו</string>
    <string name="invalid_mail">כתובת המייל לא חוקית אנא הכנס כתובת חוקית</string>
    <string name="must_enter_user_and_password">אתה חייב להכניס אימייל וסיסמא</string>
    <string name="reset_pass_success">נשלח לך מייל לאיפוס סיסמא!</string>
    <string name="reset_pass_failed">כתובת המייל לא קיימת במערכת</string>
    <string name="reset_pass_no_mail">אתה חייב להכניס אימייל</string>
    <string name="login_failed">אימייל או סיסמא לא נכונים</string>
    <string name="admin_failed">רק משתמש מורשה יכול להיכנס</string>
    <string name="navigate"> נווט לנקודה</string>
    <string name="cancel_shelter">ביטול נקודת מחסה</string>
    <string name="delete_shelter">מחק נקודה</string>
    <string name="cancel"> בטל</string>
    <string name="server_ip">http://109.226.11.202:3000</string>
    <string name="point_uploaded">מחסה הועלה למאגר הנתונים</string>
    <string name="choose_point">אנא בחר נקודה</string>
    <string name="press_window"> לחץ על החלון למחיקת הנקודה</string>

</resources>
