<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/show_all_points"
            android:id="@+id/showAllPoints"
            android:orderInCategory="0"
            android:checkable="true"
            android:checked="true"/>
        <item android:title="@string/show_approved_points"
            android:id="@+id/showApprovedPoints"
            android:orderInCategory="1"
            android:checkable="true"
            android:checked="true"/>
        <item android:title="@string/show_pending_points"
            android:id="@+id/showPendingPoints"
            android:orderInCategory="2"
            android:checkable="true"
            android:checked="true"/>
    </group>

</menu>
